--- a/style.css
+++ b/style.css
@@ -82,15 +82,15 @@ body{
 }
 .header-right .search-icon form input {
     position: absolute;
-    right: 35px;
+    right: 0;
     background: #fff !important;
     border: 1px solid #e6e6e6;
     border-radius: 30px;
     width: 500px;
     z-index: 9;
-    top: -7px;
     color: #999999;
     padding: 10px 25px;
+    top: 23px;
 }
 .form__input--show {
     display: block;
