--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ body{
     font-size: 15px;
     box-sizing: border-box;
 }
+.ml-30{
+    margin-left: 30px;
+}
+.mr-15{
+    margin-right: 15px;
+}
 .header-area {
     height: 80px;
 }
@@ -105,8 +111,114 @@ body{
     font-size: 18px;
     color: #444444;
     cursor: pointer;
+    position: relative;
 }
 
+.cart-icon .cart-init {
+    position: absolute;
+    right: 0;
+    border-top: 3px solid #ebcd1e;
+    top: 190%;
+    opacity: 0;
+    visibility: hidden;
+    transition: 3s;
+}
+.cart-icon:hover .cart-init {
+    opacity: 1;
+    visibility: visible;
+}
+.cart-icon .cart-icon-content span {
+    font-size: 11px;
+    color: #333333;
+    background: #ebcd1e;
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    text-align: center;
+    display: block;
+    position: absolute;
+    left: 65%;
+    bottom: -5px;
+}
+
+.cart-icon .cart-init .cart-content .cart-img {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    float: left;
+    padding: 15px;
+}
+.cart-icon .cart-init .cart-content .cart-img img {
+    width: 100%;
+    border: 1px solid #e6e6e6;
+}
+
+.cart-content .cart-img span {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 16px;
+    height: 16px;
+    background: #e6e6e6;
+    line-height: 16px;
+    text-align: center;
+    border-radius: 50%;
+    font-size: 11px;
+}
+
+.cart-init .cart-content {
+    width: 240px;
+    border-bottom: 1px solid #e6e6e6;
+}
+
+.cart-content .cart-text p {
+    font-size: 13px;
+    color: #666666;
+    padding-top: 18px;
+    line-height: 20px;
+}
+
+.cart-content .cart-text span {
+    font-size: 11px;
+    font-weight: 300;
+    font-style: italic;
+    line-height: 20px;
+    padding-bottom: 20px;
+    display: inline-block;
+}
+.cart-price {
+    font-size: 13px;
+    text-align: center;
+    padding: 20px 0;
+    color: #333333;
+}
+.cart-btn {
+    text-align: center;
+}
+.cart-btn .mycart {
+    padding: 5px 15px;
+    border: 1px solid #999999;
+    border-radius: 30px;
+    text-align: center;
+    float: left;
+    line-height: 20px;
+    transition: .3s;
+}
+.cart-btn .mycart:hover {
+    border: none;
+    background: #ebcd1e;
+}
+
+.cart-btn .mycart a {
+    font-size: 11px;
+    color: #999999;
+    text-decoration: none;
+    display: block;
+    transition: all 0.3s;
+}
+.cart-btn .mycart:hover a {
+    color: #fff;
+}
 .header-right .canvas-menu {
     margin-left: 30px;
     font-size: 18px;
