--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body{
     visibility: hidden;
     transition: .3s;
     background: #fff;
+    z-index: 9;
 }
 .menu-area ul li:hover ul.dropdown-menu {
     opacity: 1;
@@ -123,6 +124,8 @@ body{
     opacity: 0;
     visibility: hidden;
     transition: 3s;
+    z-index: 9;
+    background: #fff;
 }
 .cart-icon:hover .cart-init {
     opacity: 1;
@@ -272,9 +275,80 @@ body{
 .slider-area .owl-dots button {
     width: 10px;
     height: 10px;
-    border: 1px solid #f1f1f1;
-    background: transparent;
+    border: 2px solid #f1f1f1;
+    background-color: transparent;
     border-radius: 50%;
     margin-right: 10px;
 }
+.slider-area .owl-dots button.active {
+    background-color: #ebcd1e;
+    border: none;
+}
 /* Slider Area End */
+/* Service Area Start */
+.container-fluid {
+    width: 100%;
+}
+
+.service-inner {
+    width: 25%;
+    float: left;
+}
+.service-content {
+    border: 1px solid #7f7f7f;
+    border-right: none;
+    min-height: 385px;
+    position: relative;
+}
+.service-inner h4 {
+    font-size: 24px;
+    line-height: 30px;
+    color: #f9f9f9;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    font-weight: 600;
+}
+
+.service-inner h4 span {
+    color: #ebcd1e;
+}
+
+.service-inner p {
+    font-size: 13px;
+    line-height: 22px;
+    color: #d1d1d1;
+}
+
+.service-inner a {
+    margin-top: 20px;
+}
+
+.btn {
+    text-decoration: none;
+    color: #e2e2e2;
+    font-size: 13px;
+    padding: 20px 50px;
+    display: inline-block;
+    border: 1px solid #f9f9f9;
+    border-radius: 30px;
+    text-transform: uppercase;
+}
+.service-item {
+    position: absolute;
+    top: 50%;
+    text-align: center;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 78%;
+}
+.service-item h4 {
+    color: #ebcd1e;
+    padding-top: 30px;
+}
+.service-intro{
+    text-align: left;
+}
+.service-intro h4{
+    color: #f9f9f9;
+}
+/* Service Area End */
