--- a/style.css
+++ b/style.css
@@ -430,3 +430,143 @@ body{
     top: -32px;
 }
 /* About Process Area End */
+/* Project Area Start */
+.project-area {
+    overflow: hidden;
+}
+.project-wrapper {
+    width: 25%;
+    position: relative;
+    float: left;
+}
+.project-wrapper:hover .project-img::before {
+    opacity: 0.8;
+}
+.project-wrapper:hover .overly{
+    opacity: 1;
+    visibility: visible;
+}
+.project-img {
+    position: relative;
+    margin: 2px;
+}
+.project-img img {
+    width: 100%;
+}
+.project-img::before {
+    position: absolute;
+    content: '';
+    background: #555555;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    transition: 0.3s;
+}
+.overly {
+    position: absolute;
+    width: 90%;
+    height: 85%;
+    border: 2px dashed #ebcd1e;
+    top: 15px;
+    left: 17px;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s;
+}
+.project-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.project-text h4 {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #ebcd1e;
+    font-weight: 700;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s;
+}
+.project-wrapper:hover .project-text h4{
+    opacity: 1;
+    visibility: visible;
+}
+.project-text p {
+    font-size: 11px;
+    text-align: center;
+    font-weight: 300;
+    font-style: italic;
+    color: #d5d5d5;
+    opacity: 0;
+    visibility: hidden;
+    transition: 0.3s;
+}
+.project-wrapper:hover .project-text p {
+    opacity: 1;
+    visibility: visible;
+}
+/* Project Area End */
+/* Blog Area Start */
+.blog-wrapper {
+    position: relative;
+}
+.blog-img img{
+    width:100%;
+}
+.blog-init span {
+    font-size: 18px;
+    font-weight: 700;
+    display: block;
+    line-height: 1;
+    text-transform: uppercase;
+    text-align: center;
+    color: #fff;
+    padding-bottom: 5px;
+}
+
+.blog-init {
+    border: 1px solid #969696;
+    background: #333333;
+    padding: 15px 0;
+}
+.blog-date {
+    position: absolute;
+    background: #333333;
+    padding: 5px;
+}
+
+.date {
+    width: 80px;
+    height: 80px;
+    top: 20px;
+    right: 20px;
+}
+.blog-content h4 {
+    font-size: 18px;
+    color: #333333;
+    text-transform: uppercase;
+    font-weight: 700;
+    line-height: 22px;
+    padding-top: 5px;
+}
+
+.blog-content span {
+    color: #999999;
+    font-size: 11px;
+    font-weight: 300;
+    font-style: italic;
+    line-height: 22px;
+    padding-bottom: 5px;
+    display: block;
+    padding-top: 5px;
+}
+
+.blog-content p {
+    font-size: 13px;
+    color: #666666;
+    line-height: 22px;
+}
+/* Blog Area End */
