--- a/style.css
+++ b/style.css
@@ -643,30 +643,167 @@ body{
     background: #333333;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Blog Area End */
+/* Client Area Start */
+.single-client{
+    display: flex;
+}
+
+.client-img img {
+    width: 100%;
+    height: 100%;
+}
+
+.client-content {
+    background: #333333;
+    padding: 25px;
+    position: relative;
+}
+.client-content:before {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 12.5px 10px 12.5px 0;
+    border-color: transparent #333333 transparent transparent;
+    position: absolute;
+    content: '';
+    left: -10px;
+    top: 45%;
+}
+.client-content p {
+    color: #d1d1d1;
+    font-size: 13px;
+    line-height: 22px;
+    position: relative;
+}
+.client-content p span {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 60px;
+    position: relative;
+    top: 21px;
+    line-height: 0;
+    color: #ebcd1e;
+}
+.client-content .author {
+    font-size: 13px;
+    color: #ebcd1e;
+    font-weight: 600;
+    display: block;
+    margin-top: 15px;
+}
+
+.client-content .client-tag {
+    font-size: 11px;
+    font-weight: 300;
+    font-style: italic;
+    color: #999999;
+}
+
+/* Client Area End */
+/* Brand Area Start */
+.brand-area {
+    background: #ebcd1e;
+}
+/* Brand Area End */
+/* Footer Area Start */
+.footer-top {
+    text-align: center;
+    background: #333333;
+}
+
+.footer-widgets-one {
+    padding-top: 45px;
+}
+
+.footer-widgets-two {
+    padding-top: 45px;
+}
+
+.footer-widgets-two form input {
+    border: none;
+    color: #d6d6d6;
+    padding: 15px 20px;
+    border-radius: 30px;
+    font-size: 13px;
+    width: 230px;
+}
+
+.footer-widgets-two form {
+    position: relative;
+}
+
+.footer-widgets-two form button {
+    position: absolute;
+    font-size: 13px;
+    background: #ebcd1e;
+    border: none;
+    padding: 15px 20px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 30px;
+    right: 42%;
+    margin-right: 9px;
+    color: #ffffff;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.footer-widgets-three {
+    padding-top: 45px;
+}
+
+.footer-menu ul li {
+    list-style: none;
+    display: inline-block;
+    margin-right: 30px;
+}
+
+.footer-menu ul li a {
+    text-decoration: none;
+    color: #c2c2c2;
+    font-size: 13px;
+}
+
+.footer-widgets-four {
+    padding-top: 45px;
+    padding-bottom: 45px;
+}
+
+.footer-social-link a {
+    text-decoration: none;
+    font-size: 13px;
+    color: #dedede;
+    width: 30px;
+    border-radius: 50%;
+    background: #484848;
+    height: 30px;
+    position: relative;
+    display: inline-block;
+    line-height: 30px;
+    margin-right: 5px;
+    transition: 0.6s;
+}
+
+.footer-social-link a:hover {
+    background: #ebcd1e;
+    color: #333333;
+}
+
+.footer-widgets-two form button:hover {
+    background: #333333;
+}
+.footer-copyright {
+    text-align: center;
+    background: #121212;
+    padding: 15px 0;
+}
+
+.footer-copyright p {
+    font-size: 11px;
+    color: #626262;
+}
+
+.footer-copyright p a {
+    text-decoration: none;
+    color: #ebcd1e;
+}
+/* Footer Area End */
