--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -3,12 +3,87 @@
     .container {
         width: 970px;
     }
+    .item-border-b::after, .item-border-t::before{
+        display: none;
+    }
+    .our-process-item {
+        min-height: auto;
+        padding: 30px 20px;
+    }
+    .our-process-item h4{
+        font-size: 20px;
+    }
+    .our-process-item i {
+        font-size: 25px;
+    }
+    .overly {
+        top: 11px;
+        left: 10px;
+    }
+    .project-text h4 {
+        font-size: 20px;
+    }
+    .blog-btn {
+        margin-top: 50px;
+    }
+    .brand-area {
+        padding-bottom: 55px;
+    }
+    .footer-widgets-two form button {
+        right: 38%;
+        margin-right: 0;
+    }
+    .footer-widgets-one,
+    .footer-widgets-two,
+    .footer-widgets-three,
+    .footer-widgets-four {
+        padding-top: 35px;
+    }
 }
 
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width:991px) {
     .container {
         width: 750px;
+    }
+    .header-right {
+        display: none;
+    }
+    .logo-area {
+        position: absolute;
+        z-index: 9999999;
+    }
+    .mean-container a.meanmenu-reveal {
+        color: #000;
+    }
+    .mean-container .mean-bar {
+        background: #fff;
+    }
+    .mean-container .mean-bar {
+        padding: 0 0;
+    }
+    .mean-container a.meanmenu-reveal span {
+        background: #000;
+    }
+    .mean-container .mean-nav {
+        margin-top: 60px;
+    }
+    .mean-container .mean-nav ul li a.mean-expand {
+        padding: 9px !important;
+    }
+    .mean-container a.meanmenu-reveal {
+        padding: 25px 13px 11px;
+    }
+    .item-border-b::after,
+    .item-border-t::before {
+        display: none;
+    }
+    .brand-area {
+        padding-block-end: 55px;
+    }
+    .footer-widgets-two form button {
+        right: 33%;
+        margin-right: 6px;
     }
 }
 
@@ -17,6 +92,13 @@
     .container {
         width: 540px;
     }
+    .header-right {
+        display: none;
+    }
+    .item-border-b::after,
+    .item-border-t::before {
+        display: none;
+    }
 }
 
 /* // Small devices (landscape phones, 480px and up) */
@@ -24,11 +106,25 @@
     .container {
         width: 450px;
     }
+    .header-right {
+        display: none;
+    }
+    .item-border-b::after,
+    .item-border-t::before {
+        display: none;
+    }
 }
 
 /* // Extra Small devices (320px and up) */
 @media (min-width: 320px) and (max-width:479px) {
     .container {
         width: 100%;
+    }
+    .header-right {
+        display: none;
+    }
+    .item-border-b::after,
+    .item-border-t::before {
+        display: none;
     }
 }
